# mcmm

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: main.yml
src/: log.rs  main.rs  mcmm.rs  tool.rs
src/tool/: command.rs  config.rs  file.rs  request.rs  spinner.rs  structs.rs
