[package]
name = "mcmm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
basic-toml = "0.1.10"
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
futures-util = "0.3.31"
walkdir = "2.5.0"
fs2 = "0.4.3"
urlencoding = "2.1.3"
tabled = "0.20.0"
indicatif = "0.18.3"
